# llm-assignment-grader

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
ai_grader/: __init__.py  analyzer.py  guardrails.py  logging_config.py
ai_grader/grader/: __init__.py  grader.py
ai_grader/loaders/: __init__.py  document_loader.py  formats.py
ai_grader/scanner/: __init__.py  data_scanner.py
data_example/: .graderignore  README.md
data_example/student_01/: .graderignore  README.md  solution.py
data_example/student_02/: README.md  main.py  readme.txt  stretchy.py
data_example/student_03/: README.md  main.py  script.py
data_example/student_04/: notes.txt
prompts/: grading_prompt.md
