[project]
name = "ai-grader"
version = "0.1.0"
description = "AI-powered assignment grader that reads various file formats and grades using LLM"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "loguru>=0.7.0",
    "tqdm>=4.66.0",
    "typer>=0.12.0",
    "python-dotenv>=1.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0",
    "langchain-anthropic>=0.2.0",
    "pypdf>=5.0.0",
    "Pillow>=10.0.0",
    "python-docx>=1.0.0",
    "python-pptx>=0.6.0",
    "nbformat>=5.0.0",
    "pathspec>=0.12.0",
    "pre-commit>=4.5.1",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["data_example/*"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
